--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,16 @@
+body {
+  width: 100%;
+  margin: 0;
+  height: 100%;
+  padding: 0;
+  min-height: 100vh;
+  background: #ffead1;
+}
+svg {
+  border-radius: 0.25rem;
+}
 .container {
-  margin-top: 24px;
+  padding: 24px 12px;
 }
 .countdown {
   position: absolute;
